--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,137 @@ a:link {
 a:visited {
     color: #333;
 }
+/* Search result page */
+.container_grid {
+    display: grid;
+    grid-template-columns: 10rem 30.5rem auto 16.7rem;
+    grid-template-rows: 3rem 2.5rem 1px auto auto auto;
+    grid-column-gap: 1rem;
+    grid-row-gap: .4rem;
+    grid-template-areas: 
+        "logo search search account" 
+        ". tabs settings ." 
+        "line line line line"
+        ". results results ."
+        ". related related ."
+        "footer footer footer footer";
+}
+.logo {
+    grid-area: logo;
+    margin: 5px;
+}
+.logo img{
+    width: 150px;    
+}
+.search {
+    grid-area: search;
+    width: 40rem;
+    height: 2.5rem;
+    line-height: 2.25rem;
+    padding: 5px 0 0 0;
+    border: 1px solid black;
+    border-radius: 25px;
+    justify-self: start;
+}
+.search input {
+    margin-left: 12px;
+    border: none;
+    display: inline;
+    width: 35rem;
+    font-size: 1rem;
+}
+.account {
+    grid-area: account;
+    justify-self: end;
+}
+.tabs {
+    grid-area: tabs;
+    align-self: center;
+}
+.tabs a {
+    padding: 0 10px;
+}
+.line {
+    grid-area: line;
+    background-color: black;
+    height: 1px;
+}
+.settings {
+    grid-area: settings;
+    align-self: center;
+
+}
+.results {
+    grid-area: results;
+}
+.results p {
+    margin-top: 0;
+    width: 35rem;
+}
+.results h2 {
+    font-size: 22px;
+    margin-bottom: 0;
+}
+
+.related_terms {
+    position: relative;
+    width: 38.5rem;
+    border-radius: .8rem;
+    left: -2rem;
+}
+.related_terms_grid {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+}
+#related_terms h2, #related_terms h3 {
+    padding: 0 15px;
+}
+#related_terms .icon_box{
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+}
+.flex_container .icon_box {
+    width: 30px;
+    margin: auto;
+    margin-right: 0;
+}
+.flex_container {
+    display: flex;
+    flex-direction: row;
+    border-left: 1px solid gray;
+    border-bottom: 1px solid gray;
+    border-right: 1px solid gray;
+}
+.flex_container:first-child {
+    border-top: 1px solid gray;
+    border-top-left-radius: .8rem;
+    border-top-right-radius: .8rem;
+}
+.flex_container:last-child {
+    border-bottom-left-radius: .8rem;
+    border-bottom-right-radius: .8rem;
+}
+
+.related {
+    grid-area: related;
+}
+.related_grid {
+    display: grid;
+    width: 40rem;
+    height: 100%;
+    grid-template-columns: repeat(2, auto);  
+    grid-template-rows: repeat(6, 25px);   
+    grid-gap: 5px;
+    box-sizing: border-box;
+}
+.related_grid > h3 {
+    padding: 5px;
+}
+body {
+    padding-bottom: 30px;
+}
+.footer {
+    grid-area: footer;
+}
